# gwpopulation

./: .buildinfo  .codeclimate.yml  .codecov.yml  .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  GWTC1.html  GWTC1.ipynb  LICENSE.md  MANIFEST.in  README.md  conversions.py  cupy_utils.py  genindex.html  hyperpe.py  index.html  likelihood.html  models.html  models.py  objects.inv  pages_requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  tream  utils.py
_autosummary/: gwpopulation.conversions.alpha_beta_max_to_mu_var_max.html  gwpopulation.conversions.convert_to_beta_parameters.html  gwpopulation.conversions.html  gwpopulation.conversions.mu_var_max_to_alpha_beta_max.html  gwpopulation.cupy_utils.betaln.html  gwpopulation.cupy_utils.html  gwpopulation.cupy_utils.to_numpy.html  gwpopulation.cupy_utils.trapz.html  gwpopulation.hyperpe.HyperparameterLikelihood.html  gwpopulation.hyperpe.RateLikelihood.html  gwpopulation.hyperpe.html  gwpopulation.models.html  gwpopulation.models.mass.BaseSmoothedMassDistribution.html  gwpopulation.models.mass.BrokenPowerLawPeakSmoothedMassDistribution.html  gwpopulation.models.mass.BrokenPowerLawSmoothedMassDistribution.html  gwpopulation.models.mass.MultiPeakSmoothedMassDistribution.html  gwpopulation.models.mass.SinglePeakSmoothedMassDistribution.html  gwpopulation.models.mass.SmoothedMassDistribution.html  gwpopulation.models.mass.double_power_law_peak_primary_mass.html  gwpopulation.models.mass.double_power_law_primary_mass.html  gwpopulation.models.mass.double_power_law_primary_power_law_mass_ratio.html  gwpopulation.models.mass.html  gwpopulation.models.mass.power_law_primary_mass_ratio.html  gwpopulation.models.mass.power_law_primary_secondary_identical.html  gwpopulation.models.mass.power_law_primary_secondary_independent.html  gwpopulation.models.mass.three_component_single.html  gwpopulation.models.mass.two_component_primary_mass_ratio.html  gwpopulation.models.mass.two_component_primary_secondary_identical.html  gwpopulation.models.mass.two_component_primary_secondary_independent.html  gwpopulation.models.mass.two_component_single.html  gwpopulation.models.redshift.MadauDickinsonRedshift.html  gwpopulation.models.redshift.PowerLawRedshift.html  gwpopulation.models.redshift.html  gwpopulation.models.redshift.total_four_volume.html  gwpopulation.models.spin.GaussianChiEffChiP.html  gwpopulation.models.spin.gaussian_chi_eff.html  gwpopulation.models.spin.gaussian_chi_p.html  gwpopulation.models.spin.html  gwpopulation.models.spin.iid_spin.html  gwpopulation.models.spin.iid_spin_magnitude_beta.html  (+12 more)
_modules/: index.html
_sources/: index.txt  likelihood.txt  models.txt
docs/: .buildinfo  .gitignore  GWTC1.html  GWTC1.ipynb  Makefile  Makefile.gh_pages  Makefile.std  conf.py  genindex.html  index.html  index.md  index.rst  logo.py  models.txt  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: GWTC1.ipynb  GWTC3.ipynb
gwpopulation/: __init__.py  backend.py  conversions.py  cupy_utils.py  hyperpe.py  models.py  utils.py  vt.py
gwpopulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htmlcov/: gwpopulation___init___py.html  gwpopulation_conversions_py.html  gwpopulation_cupy_utils_py.html  gwpopulation_hyperpe_py.html  gwpopulation_models_py.html  gwpopulation_utils_py.html  index.html  status.json
joss/: paper.bib  paper.md
priors/: mass_rates.prior  (+3 more)
(+371 files in other folders)
