[metadata]
name = gwpopulation
description = Unified population inference
url = https://github.com/ColmTalbot/gwpopulation
author = Colm Talbot
author_email = talbotcolm@gmail.com
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = ">=3.8"

[options]
packages = find:
install_requires = file: requirements.txt

[options.extras_require]
cupy = cupy
jax =
  jax
  jaxlib
pages = file: pages_requirements.txt
test = file: test_requirements.txt

[options.packages.find]
exclude =
    test
    venv
    priors

[flake8]
exclude = .git,build,dist,docs,test,*__init__.py
max-line-length = 120
ignore = E129 W503

[tool:pytest]

[coverage:run]
omit =
  gwpopulation/experimental/**
  gwpopulation/_version.py

[options.entry_points]
gwpopulation.xp =
    gwpopulation_hyperpe = gwpopulation.hyperpe
    gwpopulation_interped= gwpopulation.models.interped
    gwpopulation_mass = gwpopulation.models.mass
    gwpopulation_redshift = gwpopulation.models.redshift
    gwpopulation_spin = gwpopulation.models.spin
    gwpopulation_utils = gwpopulation.utils
    gwpopulation_vt = gwpopulation.vt
    gwpopulation_cosmo = gwpopulation.experimental.cosmo_models
gwpopulation.scs =
    gwpopulation_mass = gwpopulation.models.mass
    gwpopulation_utils = gwpopulation.utils
